# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-ci.yml
gendiff/: __init__.py
gendiff/core/: generate_diff.py  parse_data.py
gendiff/formaters/: json_format.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/core/: test_generate_diff.py
