[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = "Differences evaluator."
authors = ["Andrey Zhelezov <azhelezov@mail.ru>"]
packages = [
    { include = "gendiff"}
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
