[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Differences evaluator."
authors = ["Andrey Zhelezov <azhelezov@mail.ru>"]
packages = [
    { include = "gendiff"}
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
